# slack-typing

./: Cargo.toml  README.md
src/: main.rs
