[package]
name = "slack-typing"
description = "Always Be Typin'"
version = "0.1.0"
license = "MIT"
readme = "README.md"
authors = ["Daniel Lockyer <daniel@daniellockyer.com>"]
repository = "https://github.com/neosilky/slack-typing"
homepage = "https://github.com/neosilky/slack-typing"

[dependencies]
slack = "0.22.0"
